[package]
name = "Advent-of-Code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
lazy_static = "1.4.0"
itertools = "0.10.5"
num = "0.4.0"
nom = "7.1.1"
parse-display = "0.7.0"
termion = "2.0.1"
clap = { version = "4.0.29", features = ["derive"] }
rand = "0.8.5"
utils = { path = "utils" }